--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.2",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -21,11 +22,12 @@
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.62.1",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=8899 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
