Added ".gitattributes", "socket.io-client" and chat page
- Added ".gitattributes", "socket.io-client"
- Create chat page and setup socket
- Fixed private route issue and other UI bugs

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 REACT_APP_CUSTOM_NODE_ENV = "devlopment"
-REACT_APP_BACKEND_API_URL = "http://localhost:5000/api"
+REACT_APP_BACKEND_API_URL = "http://localhost:5000"
 REACT_APP_PUBLIC_URL = "https://braveryy.netlify.app"
