--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.62.1",
+    "socket.io-client": "^4.7.2",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
