--- a/package.json
+++ b/package.json
@@ -56,7 +56,13 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
     "@redux-devtools/core": "^3.13.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.3",
+    "globals": "^15.8.0",
     "prettier": "3.0.1"
   }
 }
