--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-redux": "^7.1.33",
+    "@types/redux-thunk": "^2.1.0",
+    "@types/socket.io-client": "^3.0.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
