--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@eslint/js": "^9.6.0",
     "@redux-devtools/core": "^3.13.1",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
